--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@wasm-tool/wasm-pack-plugin": "^1.6.0",
-    "ts-node": "^10.4.0",
+    "history": "5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "ts-node": "^10.4.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
