--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -11,6 +11,8 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.78"
 console_error_panic_hook = "0.1.7"
+regex = "1.5.4"
+lazy_static = "1.4.0"
 
 [dependencies.web-sys]
 version = "0.3.55"
