--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "docs": "rm -rf docs && yarn build && git add docs && git commit -m \"docs\""
   },
   "eslintConfig": {
     "extends": [
