--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -13,6 +13,7 @@ wasm-bindgen = "0.2.78"
 console_error_panic_hook = "0.1.7"
 regex = "1.5.4"
 lazy_static = "1.4.0"
+itertools = "0.10.3"
 
 [dependencies.web-sys]
 version = "0.3.55"
